--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                     <div class="text-center header-content mx-auto">
                         <h4 class="text-white first-title mb-4">Welcome</h4>
                         <h1 class="header-name text-white text-capitalize mb-0">I'M <span class="simple-text-rotate fw-bold">swajith chennuri.,A Web Designer.</span></h1>
-                        <p class="text-white mx-auto header-desc mt-4">Iam a student of SR University with passion of Web Development .</p>
+                        <p class="text-white mx-auto header-desc mt-4">Recent graduate aspiring to excel in Software Development.</p>
                         <div class="mt-4 pt-2">
                             <a href="#" class="btn btn-outline-custom btn-round" download="swajith resume.pdf">Download Cv</a>
                         </div>
@@ -121,7 +121,7 @@
                         <h4 class="mt-4">Hello! <span class="text-custom fw-bold">I'M SWAJITH CHENNURI.</span></h4>
                         <h3>objective</h3>
                         <p class="text-muted mt-4">To obtain a challenging and dynamic entry-level position in a reputable organization that utilizes my strong analytical, problem-solving, and communication skills while providing opportunities for professional growth and development. </p>
-                        <p class="text-muted mt-2">Graduating in SR University at Ananthasagar ,in Electroic Communication Engineering .form diploma background out from Vemuganti Manohara Rao Polytechnic.</p>
+                        <p class="text-muted mt-2">Graduated from SR University, Ananthasagar, with a degree in Electronics and Communication Engineering, and hold a diploma from Vemuganti Manohara Rao Polytechnic.</p>
                         <div>
                             <ul class="mb-0 about-social list-inline mt-4">
                                 <li class="list-inline-item"><a href="mailto:chennuriswajith@gmail.com"><i class="mdi mdi-dribbble"></i></a></li>
@@ -443,7 +443,7 @@
                         </div>
                         <div class="mt-3">
                             <h5 class="mb-0 contact_detail-title fw-bold">Email Us At</h5>
-                            <p class="text-muted">chennuriswajith@gmail.com</p>
+                            <p class="text-muted">chennuriswajith088@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -592,3 +592,4 @@
 
 <!-- Mirrored from kerrilive.netlify.app/light/index_3.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 04 Jul 2023 15:32:52 GMT -->
 </html>
+
